--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@ body,
 }
 
 .App {
-  background-color: #001e3c;
+  background-color: #ccc;
+  box-sizing: border-box;
+  padding: 24px;
   overflow: auto;
 }
 
